--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Portafolio de Jessica Peña",
   "main": "script.js",
   "scripts": {
-    "start": "index.html"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "author": "Jorge Mateus",
   "license": "ISC",
