--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Jorge Mateus",
   "license": "ISC",
   "dependencies": {
-    "colorthief": "^2.4.0"
+    "colorthief": "^2.2.0"
   },
   "devDependencies": {
-    "parcel": "^2.11.0"
+    "@parcel/resolver-glob": "^2.11.0",
+    "parcel": "^2.11.0",
+    "parcel-plugin-static-files-copy": "^2.6.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   }
 }
